[gd_scene load_steps=3 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://mainmenu_1.gd" type="Script" id=2]

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="C/V"]
margin_right = 720.0
margin_bottom = 257.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.12549, 0.12549, 0.145098, 1 )

[node name="M" type="MarginContainer" parent="C/V"]
margin_top = 261.0
margin_right = 720.0
margin_bottom = 1219.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="C/V/M"]
margin_left = 30.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 908.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty3" type="Label" parent="C/V/M/R"]
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CHeader" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 44.0
margin_right = 660.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="R" type="CenterContainer" parent="C/V/M/R/CHeader"]
margin_right = 660.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="D" type="HBoxContainer" parent="C/V/M/R/CHeader/R"]
margin_left = 273.0
margin_right = 387.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="C/V/M/R/CHeader/R/D"]
margin_right = 114.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Homeland"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Label" parent="C/V/M/R"]
margin_top = 82.0
margin_right = 660.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty2" type="Label" parent="C/V/M/R"]
margin_top = 126.0
margin_right = 660.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty5" type="Label" parent="C/V/M/R"]
margin_top = 170.0
margin_right = 660.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CButtons" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 214.0
margin_right = 660.0
margin_bottom = 394.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Decision1" type="Button" parent="C/V/M/R/CButtons"]
margin_right = 305.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons/Decision1"]
anchor_top = -0.00555556
anchor_right = 1.00328
anchor_bottom = 0.994445
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons/Decision1/C"]
margin_left = 72.0
margin_top = 54.0
margin_right = 233.0
margin_bottom = 125.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "New
Random Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decision2" type="Button" parent="C/V/M/R/CButtons"]
margin_left = 355.0
margin_right = 660.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
disabled = true

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons/Decision2"]
anchor_right = 0.990164
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons/Decision2/C"]
margin_left = 69.0
margin_top = 54.0
margin_right = 233.0
margin_bottom = 125.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "New
Scenario Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty6" type="Label" parent="C/V/M/R"]
margin_top = 398.0
margin_right = 660.0
margin_bottom = 438.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CButtons2" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 442.0
margin_right = 660.0
margin_bottom = 622.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Decision3" type="Button" parent="C/V/M/R/CButtons2"]
margin_right = 305.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons2/Decision3"]
anchor_right = 0.990164
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons2/Decision3/C"]
margin_left = 89.0
margin_top = 73.0
margin_right = 212.0
margin_bottom = 107.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Load Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decision4" type="Button" parent="C/V/M/R/CButtons2"]
margin_left = 355.0
margin_right = 660.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons2/Decision4"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons2/Decision4/C"]
margin_left = 129.0
margin_top = 73.0
margin_right = 175.0
margin_bottom = 107.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty7" type="Label" parent="C/V/M/R"]
margin_top = 626.0
margin_right = 660.0
margin_bottom = 666.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty8" type="Label" parent="C/V/M/R"]
margin_top = 670.0
margin_right = 660.0
margin_bottom = 710.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Quote" type="RichTextLabel" parent="C/V/M/R"]
margin_top = 714.0
margin_right = 660.0
margin_bottom = 814.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 1 )

[node name="Empty9" type="Label" parent="C/V/M/R"]
margin_top = 818.0
margin_right = 660.0
margin_bottom = 858.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="C/V"]
margin_top = 1223.0
margin_right = 720.0
margin_bottom = 1480.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.12549, 0.12549, 0.145098, 1 )
[connection signal="pressed" from="C/V/M/R/CButtons/Decision1" to="." method="_on_NewRandom_pressed"]
[connection signal="pressed" from="C/V/M/R/CButtons/Decision2" to="." method="_on_NewScenario_pressed"]
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision3" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision4" to="." method="_on_Quit_pressed"]
